Fixing the reponsive on tablet for things to do section

--- a/css/thingsToDo.css
+++ b/css/thingsToDo.css
@@ -22,10 +22,10 @@
 }
 
 .place img {
-  width: 300px;
-  height: 400px !important;
+  width: 250px;
+  height: 80%;
   border-radius: 10px 10px 0px 0px;
-  transition: transform 0.3s, brightness 0.3s;
+  /* transition: transform 0.3s, brightness 0.3s; */
 }
 
 .place p {
@@ -47,14 +47,18 @@
   background-color: #fff;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  .places-container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  .things-to-do {
+    padding-top: 0px;
+  }
+  .things-to-do h2 {
+    margin-top: 0px;
   }
   .place {
-    flex: 1 0 calc(10% - 10px); /* Two items per row with spacing */
-    /* margin: 5px; */
+    flex: 1 1 calc(20% - 10px);
+    height: 200px;
+  }
+  .place img {
+    width: 100%;
   }
 }
 @media (max-width: 768px) {
